# MatLib

./: .gitignore  CMakeLists.txt  main.cpp
app/: CMakeLists.txt
app/MatLib/: CMakeLists.txt
app/MatLib/include/: main.h
app/MatLib/src/: main.cpp
app/MatriceLibrary/: CMakeLists.txt
app/MatriceLibrary/include/: main.h
app/MatriceLibrary/src/: main.cpp
include/: Matrice.h
libs/: CMakeLists.txt
libs/MatriceLibrary/: CMakeLists.txt
libs/MatriceLibrary/include/: Matrice.h
libs/MatriceLibrary/src/: Matrice.cpp
src/: CMakeLists.txt  Matrice.cpp  eigen_trials.cpp  main.cpp
